# sovereign-brain

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
sovereign_brain/: __init__.py  brain.py
tests/: test_brain.py
