[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-brain"
version = "1.0.0"
description = "Local-first persistent memory with semantic search. sqlite-vec powered. No cloud."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Like One Foundation", email = "hello@likeone.ai"}]
keywords = ["ai", "memory", "brain", "semantic-search", "sqlite-vec", "rag", "knowledge-graph", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
vec = ["sqlite-vec>=0.1.0"]
all = ["sqlite-vec>=0.1.0", "ollama>=0.1.0"]

[project.urls]
Homepage = "https://likeone.ai"
Repository = "https://github.com/sophiacave/sovereign-brain"
Issues = "https://github.com/sophiacave/sovereign-brain/issues"

[tool.setuptools.packages.find]
include = ["sovereign_brain*"]
